-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: openjdk8u262
-
Component/s: core-svc
-
b06
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8246810 | openjdk8u272 | Andrew Hughes | P2 | Resolved | Fixed | b01 |
It seems after JDK-8227269, jdk8u-dev fails to build on Windows with MSVC 2013:
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(90) : error C2143: syntax error : missing ';' before 'type'
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(93) : error C2065: 'deleted' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(93) : warning C4047: 'return' : 'bag *' differs in levels of indirection from 'int'
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(115) : error C2143: syntax error : missing ';' before 'type'
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(116) : error C2065: 'signature' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(116) : warning C4047: 'function' : 'char **' differs in levels of indirection from 'int *'
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(116) : warning C4024: 'classSignature' : different types for formal and actual parameter 2
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(120) : error C2065: 'signature' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(122) : error C2065: 'signature' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(122) : warning C4022: 'jvmtiDeallocate' : pointer mismatch for actual parameter 1
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(133) : error C2275: 'jvmtiError' : illegal use of this type as an expression
c:\buildbot\worker\build-jdk8u-dev-windows\build\build\windows-x86_64-normal-server-fastdebug\jdk\include\jvmti.h(388) : see declaration of 'jvmtiError'
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(133) : error C2146: syntax error : missing ';' before identifier 'error'
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(133) : error C2065: 'error' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(134) : error C2065: 'error' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(137) : error C2275: 'jvmtiEventCallbacks' : illegal use of this type as an expression
c:\buildbot\worker\build-jdk8u-dev-windows\build\build\windows-x86_64-normal-server-fastdebug\jdk\include\jvmti.h(997) : see declaration of 'jvmtiEventCallbacks'
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(137) : error C2146: syntax error : missing ';' before identifier 'cb'
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(137) : error C2065: 'cb' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(138) : error C2065: 'cb' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(138) : error C2065: 'cb' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(139) : error C2065: 'cb' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(139) : error C2224: left of '.ObjectFree' must have struct/union type
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(140) : error C2065: 'error' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(140) : error C2065: 'cb' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(140) : warning C4133: 'function' : incompatible types - from 'int *' to 'const jvmtiEventCallbacks *'
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(140) : error C2065: 'cb' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(141) : error C2065: 'error' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(144) : error C2065: 'error' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(145) : error C2065: 'error' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(169) : error C2275: 'jint' : illegal use of this type as an expression
c:\buildbot\worker\build-jdk8u-dev-windows\build\jdk\src\windows\javavm\export\jni_md.h(33) : see declaration of 'jint'
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(169) : error C2146: syntax error : missing ';' before identifier 'classCount'
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(169) : error C2065: 'classCount' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(170) : error C2275: 'jclass' : illegal use of this type as an expression
c:\buildbot\worker\build-jdk8u-dev-windows\build\build\windows-x86_64-normal-server-fastdebug\jdk\include\jni.h(102) : see declaration of 'jclass'
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(170) : error C2065: 'classes' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(171) : error C2275: 'jvmtiError' : illegal use of this type as an expression
c:\buildbot\worker\build-jdk8u-dev-windows\build\build\windows-x86_64-normal-server-fastdebug\jdk\include\jvmti.h(388) : see declaration of 'jvmtiError'
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(171) : error C2146: syntax error : missing ';' before identifier 'error'
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(171) : error C2065: 'error' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(172) : error C2275: 'jint' : illegal use of this type as an expression
c:\buildbot\worker\build-jdk8u-dev-windows\build\jdk\src\windows\javavm\export\jni_md.h(33) : see declaration of 'jint'
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(172) : error C2146: syntax error : missing ';' before identifier 'i'
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(172) : error C2065: 'i' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(174) : error C2065: 'error' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(174) : error C2065: 'classes' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(174) : warning C4047: 'function' : 'jclass **' differs in levels of indirection from 'int *'
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(174) : warning C4024: 'allLoadedClasses' : different types for formal and actual parameter 1
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(174) : error C2065: 'classCount' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(175) : error C2065: 'error' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(176) : error C2065: 'i' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(176) : error C2065: 'i' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(176) : error C2065: 'classCount' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(176) : error C2065: 'i' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(177) : error C2065: 'classes' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(177) : error C2065: 'i' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(177) : error C2109: subscript requires array or pointer type
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(185) : error C2065: 'classes' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(185) : warning C4022: 'jvmtiDeallocate' : pointer mismatch for actual parameter 1
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(187) : error C2065: 'error' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(187) : error C2065: 'error' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(187) : error C2065: 'error' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(90) : error C2143: syntax error : missing ';' before 'type'
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(93) : error C2065: 'deleted' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(93) : warning C4047: 'return' : 'bag *' differs in levels of indirection from 'int'
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(115) : error C2143: syntax error : missing ';' before 'type'
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(116) : error C2065: 'signature' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(116) : warning C4047: 'function' : 'char **' differs in levels of indirection from 'int *'
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(116) : warning C4024: 'classSignature' : different types for formal and actual parameter 2
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(120) : error C2065: 'signature' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(122) : error C2065: 'signature' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(122) : warning C4022: 'jvmtiDeallocate' : pointer mismatch for actual parameter 1
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(133) : error C2275: 'jvmtiError' : illegal use of this type as an expression
c:\buildbot\worker\build-jdk8u-dev-windows\build\build\windows-x86_64-normal-server-fastdebug\jdk\include\jvmti.h(388) : see declaration of 'jvmtiError'
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(133) : error C2146: syntax error : missing ';' before identifier 'error'
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(133) : error C2065: 'error' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(134) : error C2065: 'error' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(137) : error C2275: 'jvmtiEventCallbacks' : illegal use of this type as an expression
c:\buildbot\worker\build-jdk8u-dev-windows\build\build\windows-x86_64-normal-server-fastdebug\jdk\include\jvmti.h(997) : see declaration of 'jvmtiEventCallbacks'
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(137) : error C2146: syntax error : missing ';' before identifier 'cb'
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(137) : error C2065: 'cb' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(138) : error C2065: 'cb' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(138) : error C2065: 'cb' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(139) : error C2065: 'cb' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(139) : error C2224: left of '.ObjectFree' must have struct/union type
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(140) : error C2065: 'error' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(140) : error C2065: 'cb' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(140) : warning C4133: 'function' : incompatible types - from 'int *' to 'const jvmtiEventCallbacks *'
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(140) : error C2065: 'cb' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(141) : error C2065: 'error' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(144) : error C2065: 'error' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(145) : error C2065: 'error' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(169) : error C2275: 'jint' : illegal use of this type as an expression
c:\buildbot\worker\build-jdk8u-dev-windows\build\jdk\src\windows\javavm\export\jni_md.h(33) : see declaration of 'jint'
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(169) : error C2146: syntax error : missing ';' before identifier 'classCount'
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(169) : error C2065: 'classCount' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(170) : error C2275: 'jclass' : illegal use of this type as an expression
c:\buildbot\worker\build-jdk8u-dev-windows\build\build\windows-x86_64-normal-server-fastdebug\jdk\include\jni.h(102) : see declaration of 'jclass'
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(170) : error C2065: 'classes' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(171) : error C2275: 'jvmtiError' : illegal use of this type as an expression
c:\buildbot\worker\build-jdk8u-dev-windows\build\build\windows-x86_64-normal-server-fastdebug\jdk\include\jvmti.h(388) : see declaration of 'jvmtiError'
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(171) : error C2146: syntax error : missing ';' before identifier 'error'
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(171) : error C2065: 'error' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(172) : error C2275: 'jint' : illegal use of this type as an expression
c:\buildbot\worker\build-jdk8u-dev-windows\build\jdk\src\windows\javavm\export\jni_md.h(33) : see declaration of 'jint'
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(172) : error C2146: syntax error : missing ';' before identifier 'i'
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(172) : error C2065: 'i' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(174) : error C2065: 'error' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(174) : error C2065: 'classes' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(174) : warning C4047: 'function' : 'jclass **' differs in levels of indirection from 'int *'
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(174) : warning C4024: 'allLoadedClasses' : different types for formal and actual parameter 1
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(174) : error C2065: 'classCount' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(175) : error C2065: 'error' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(176) : error C2065: 'i' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(176) : error C2065: 'i' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(176) : error C2065: 'classCount' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(176) : error C2065: 'i' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(177) : error C2065: 'classes' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(177) : error C2065: 'i' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(177) : error C2109: subscript requires array or pointer type
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(185) : error C2065: 'classes' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(185) : warning C4022: 'jvmtiDeallocate' : pointer mismatch for actual parameter 1
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(187) : error C2065: 'error' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(187) : error C2065: 'error' : undeclared identifier
c:/buildbot/worker/build-jdk8u-dev-windows/build/jdk/src/share/back/classTrack.c(187) : error C2065: 'error' : undeclared identifier
- backported by
-
JDK-8246810 Windows build fails after JDK-8227269
-
- Resolved
-
- relates to
-
JDK-8227269 Slow class loading when running with JDWP
-
- Resolved
-
- links to