8246223: Windows build fails after JDK-8227269

MSVC 2013 uses a modified variant of C90 and requires all declarations before statements

Reviewed-by: andrew